@@ -1,19 +1,36 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
 }
-
-group = 'org.example'
-version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
-
-dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17) }
 }
 
+javafx {
+    version = '17.0.2'
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
+}
+
+dependencies {
+//    implementation "org.openjfx:javafx-controls:${javafxVersion}"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+}
 test {
     useJUnitPlatform()
+}
+application {
+    mainClassName = 'Banking.BankingMain'}
+
+run {
+    // Ensures the JVM knows about JavaFX modules
+    jvmArgs = [
+            "--add-modules=javafx.controls,javafx.fxml"
+    ]
 }
